CS_SBOX_20150209_01/Metadata/unpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a System Admin Attribute that for certain circumstances, we can bypass Validation when Deploying.</description>
        <inlineHelpText>This is a System Admin Attribute that for certain circumstances, we can bypass Validation when Deploying.</inlineHelpText>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Rep__c</fullName>
        <description>Created by LM on 1/30/2014 for Phase2 Rollout</description>
        <label>CA Rep</label>
        <relationshipName>CA_Rep</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <defaultValue>datevalue(&apos;1/1/1900&apos;)</defaultValue>
        <description>Created by LM on 5/6/2014 for Phase2 (requested by Bryan Lehner and Ryan Erwin)</description>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Basic_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Basic Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Broadcast_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Broadcast User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Client_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Client Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Major_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Major Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manager_VP__c</fullName>
        <formula>Manager.Is_VP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Manager VP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_National_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is National Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_VP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is VP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Created by LM on 9/25/2013 for Phase 2 rollout</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Functional_Team__c</fullName>
        <label>Reporting Functional Team</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Accounts Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Business Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Main_Team__c</fullName>
        <label>Reporting Main Team</label>
        <picklist>
            <picklistValues>
                <fullName>New Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Region__c</fullName>
        <label>Reporting Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <picklist>
            <picklistValues>
                <fullName>Guided Selling</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Search Filters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Followed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowID2__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowID2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowID__c</fullName>
        <defaultValue>$User.Id</defaultValue>
        <label>ShowID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Softrax_Territory__c</fullName>
        <description>Created by LM on 11/22/2013 for Phase 2 rollout</description>
        <label>Softrax Territory</label>
        <picklist>
            <picklistValues>
                <fullName>130 - New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140 - Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>000 - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>185 - Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170 - Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125 - Washington, D.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 - St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>135 - New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105 - Minneapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>070 - Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>060 - Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>050 - Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110 - Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 - Miami</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160 - Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>045 - San Diego</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>User External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wdcc2__UserUuid__c</fullName>
        <description>The UUID for the work.com user that is connected to this Salesforce user.</description>
        <externalId>true</externalId>
        <label>Work.com User UUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>Admin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Broadcast_Sales</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Broadcast Transaction Sales User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Broadcast Transaction Manager</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Broadcast Sales</label>
    </listViews>
    <listViews>
        <fullName>Client_Services</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Client Services User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Client Services Manager</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Client Services</label>
    </listViews>
    <listViews>
        <fullName>Contract_Admin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Contract Administration</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contract Admin</label>
    </listViews>
    <listViews>
        <fullName>Global_Analysts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Global Analysts</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Global Analysts</label>
    </listViews>
    <listViews>
        <fullName>Lead_Gen</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Lead Gen</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Lead Gen</label>
    </listViews>
    <listViews>
        <fullName>Managed_Services</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Managed Services</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Managed Services</label>
    </listViews>
    <listViews>
        <fullName>Marketing</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filters>
        <label>Marketing</label>
    </listViews>
    <listViews>
        <fullName>New_Biz</fullName>
        <booleanFilter>(1  OR 3) AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>New Biz Sales User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>New Biz Manager</value>
        </filters>
        <label>New Biz</label>
    </listViews>
    <listViews>
        <fullName>Renewals</fullName>
        <booleanFilter>(1 OR 2 )AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Renewals Sales User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Renewals Manager</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Renewals</label>
    </listViews>
    <listViews>
        <fullName>Sales_Support</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CA_Rep__c</columns>
        <columns>Hire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Sales Support</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sales Support</label>
    </listViews>
    <listViews>
        <fullName>Sales_Users_No_Manager</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MANAGER</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Sales Users No Manager</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_VP</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>SBQQ__OutputFormatChangeAllowed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_VP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sales VP</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>